--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -275,6 +275,10 @@ import ytIcon from '../assets/yt_icon.svg';
         flex-direction: row;
         align-items: center;
         margin-bottom: 2.2vh;
+        transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+    }
+    .footer-right-icon-container:hover {
+        scale: 1.03;
     }
 
     #pod-dolacz {
@@ -284,7 +288,6 @@ import ytIcon from '../assets/yt_icon.svg';
         margin-top: 0;
         margin-bottom: 8.9vh;
     }
-
     @media screen and (max-width: 1000px) { 
         .footer-left > h2 {
             font-size: 5.2vw;
