--- a/src/components/en_components/Footer.astro
+++ b/src/components/en_components/Footer.astro
@@ -282,6 +282,10 @@ import ytIcon from '../../assets/yt_icon.svg';
         flex-direction: row;
         align-items: center;
         margin-bottom: 2.2vh;
+        transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+    }
+    .footer-right-icon-container:hover {
+        scale: 1.03;
     }
 
     #pod-dolacz {
