--- a/src/components/en_components/Plyty_cmpnt.astro
+++ b/src/components/en_components/Plyty_cmpnt.astro
@@ -39,9 +39,15 @@ import { ViewTransitions } from "astro:transitions";
                 <p class="projekt-text-p">
                     The debut album of Fantastica is a story of contrasts. Sacrum.Profanum. takes you on a musical journey through the world of Heinrich Ignaz Franz von Biber—a composer who masterfully balanced between the extraordinary and the everyday. In his works, spirituality meets earthly expression, and mystical contemplation intertwines with untamed virtuosity. On this album, the Baroque violin and harpsichord not only interpret these contrasts but become part of them—vibrating with energy, painting sonic landscapes, and telling stories filled with tension, melancholy, and bravado.
                 </p>
-                <h6>
-                    Release: 29 April 2025
-                </h6>
+                <!-- <a href="CD/biber">
+                    <button class="cta">
+                      <span>Buy Biber</span>
+                      <svg width="27px" height="18px" viewBox="0 0 13 10">
+                        <path d="M1,5 L11,5"></path>
+                        <polyline points="8 1 12 5 8 9"></polyline>
+                      </svg>
+                    </button>
+                </a> -->
             </div>
         </div>
     </div>
@@ -73,7 +79,7 @@ import { ViewTransitions } from "astro:transitions";
 .albumy-container {
         display: grid;
         grid-template-columns: 100vw;
-        grid-template-rows: 730px 78vw 60vw 78vw;
+        grid-template-rows: 730px auto 60vw 78vw;
         font-weight: 400;
         font-family: "Gilda Display";
         
@@ -133,6 +139,7 @@ import { ViewTransitions } from "astro:transitions";
         display: grid;
         grid-template-rows: 1fr;
         width: 100vw;
+        height: fit-content;
         }
     
     .albumy-biber-up {
@@ -143,6 +150,7 @@ import { ViewTransitions } from "astro:transitions";
         grid-row: 1/2;
         background: linear-gradient(180deg, #ECE4F0 0%, #E0DBC7 100%);
         padding-right: 6vw;
+        height: 960px;
     }
 
     .albumy-biber-img-container {
@@ -190,13 +198,71 @@ import { ViewTransitions } from "astro:transitions";
         font-weight: 400;
         font-size: clamp(20px, 2.5vw, 42px);
     }
-    h6 {
-        font-size: clamp(16px, 1.9vw, 35px);
-        font-weight: normal;
-    }
-    .albumy-biber-text p {
-        /* padding-left: 7vw; */
-    }
+    .albumy-biber-text > a > button {
+            margin-top: 50px;
+        }
+        .cta {
+            font-size: clamp(16px, 1.9vw, 35px);
+            font-weight: normal;
+            margin-top: 20px;
+
+            position: relative;
+            margin: auto;
+            padding: 12px 18px;
+            transition: all 0.2s ease;
+            border: none;
+            background: none;
+            cursor: pointer;
+            border: 2px solid #62db32;
+            border-radius: 50px;
+        }
+
+        .cta:before {
+            content: "";
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            display: block;
+            border-radius: 50px;
+            width: 65px;
+            height: 61px;
+            transition: all 0.3s ease;
+        }
+
+        .cta span {
+            position: relative;
+            font-family: "Ubuntu", sans-serif;
+            font-size: 32px;
+            font-weight: 700;
+            letter-spacing: 0.05em;
+            color: #62db32;
+        }
+
+        .cta svg {
+            position: relative;
+            top: -3px;
+            margin-left: 10px;
+            fill: none;
+            stroke-linecap: round;
+            stroke-linejoin: round;
+            stroke: #62db32;
+            stroke-width: 2;
+            transform: translateX(-5px);
+            transition: all 0.3s ease;
+        }
+
+        .cta:hover:before {
+            width: 100%;
+            background: #ceffd0;
+        }
+
+        .cta:hover svg {
+            transform: translateX(0);
+        }
+
+        .cta:active {
+            transform: scale(0.95);
+        }
     #bg-eclipse {
         height: 100%;
         width: 100%;
