--- a/src/pages/plyty/biber.astro
+++ b/src/pages/plyty/biber.astro
@@ -145,6 +145,7 @@ import {
           data-item-description="Premiera: 29 kwietnia 2025. Album w przedsprzedaży zawiera: oryginalna płyta CD z autografami artystek, prezent-niespodzianka."
           data-item-image={plytyBiberPlyta.src}
           data-item-name="Biber"
+          data-item-weight="80"
           data-item-custom1-name="Punkt odbioru InPost"
           data-item-custom1-type="readonly"
           data-item-custom1-value=""
@@ -662,3 +663,4 @@ import {
 
 </style>
 
+ 
