--- a/src/pages/plyty/biber.astro
+++ b/src/pages/plyty/biber.astro
@@ -209,7 +209,7 @@ import {
         });
       </script>
 </Layout>
-<script>
+<!-- <script>
   // Add this to your main JavaScript file
 document.addEventListener('snipcart.ready', function() {
     Snipcart.execute('registerShipping', function(shipping) {
@@ -282,7 +282,7 @@ document.addEventListener('snipcart.ready', function() {
       });
     }
   });
-</script>
+</script> -->
 <script>
   document.addEventListener("DOMContentLoaded", () => {
     const lockerSelect = document.getElementById("locker-select");
