--- a/src/pages/plyty/biber copy 3.astro
+++ b/src/pages/plyty/biber copy 3.astro
@@ -146,9 +146,8 @@ import {
           data-item-image={plytyBiberPlyta.src}
           data-item-name="Biber"
           data-item-weight="80"
-          data-item-custom1-name="Punkt odbioru InPost"
-          data-item-custom1-type="readonly"
-          data-item-custom1-value=""
+          data-item-custom1-name="Jeśli Punkt Odbioru InPost:"
+          data-item-custom1-value="Numer paczkomatu"
         >
           Zamów w przedsprzedaży  
           <div class="star-1"
