--- a/src/pages/plyty/biber.astro
+++ b/src/pages/plyty/biber.astro
@@ -92,7 +92,7 @@ import {
     </div>
     
     <div class="przesprzedaz-container">
-        <button onclick="window.open('https://buy.stripe.com/test_4gw9D84T1bhP2pW6oo', '_blank')">
+        <button onclick="window.open('https://buy.stripe.com/8wMbJNfHi0XSdDq288', '_blank')">
           Zamów w przedsprzedaży  
           <div class="star-1"
           style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
