--- a/src/pages/plyty/biber.astro
+++ b/src/pages/plyty/biber.astro
@@ -552,8 +552,92 @@ import Biber2 from '../../assets/biber2.png'
     pointer-events: none;
     /* fill: #f55e5c; */
   }
-/* Response Response Response Response Response Response Response Response Response Response */
 
+
+/* Response Response Response Response Response Response Response Response Response Response Response Response Response Response Response Response Response Response Response */
+
+@media screen and (max-width: 600px) {
+
+  .albumy-headline {
+      width: 100vw;
+      grid-row: 1 / 2;
+      display: grid;
+      grid-template-columns: 100vw;
+      grid-template-rows: 120px auto auto;
+  }
+
+  .albumy-headline-text {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+  }
+  .plyty-biber-dots {
+    top: auto;
+    right: auto;
+    width: 270px;
+    z-index: 2;    
+  }
+  .albumy-headline-img-container {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
+  .albumy-biber-img {
+    width: 65.6vw;
+    padding: 0;
+    padding-top: 16px;
+  }
+
+  /* Container 2 Container 2 Container 2 Container 2 Container 2 Container 2 Container 2 Container 2 */
+  .albumy-biber2-container {
+    padding-top: 9vh;
+    padding-bottom: 6vh;
+    grid-template-rows: auto auto;
+  }
+  .albumy-biber2-text {
+    grid-column: 1/3;
+  }
+  .projekt-text-p {
+    margin-bottom: 4vh;
+  }
+  .albumy-biber2-img {
+    grid-column: 1/3;
+    grid-row: 2/3;    
+    
+    justify-self: center;
+    width: 50vw;
+  }
+
+  /* Container 3 Container 3 Container 3 Container 3 Container 3 Container 3 Container 3 Container 3 */
+  .albumy-biber3-text-inside {
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    padding-bottom: 3.5vh;
+
+  }
+  .albumy-biber3-text-inside > h4 {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    font-weight: bold;
+  }
+  .albumy-biber3-text-inside > p {
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+
+  /* Container 4 Container 4 Container 4 Container 4 Container 4 Container 4 Container 4 Container 4 */
+  .albumy-biber4-container > .albumy-biber3-text >.albumy-biber3-text-inside {
+    grid-template-rows: 54px auto;
+  }
+  .albumy-biber4-container > .albumy-biber3-text >.albumy-biber3-text-inside > h4 {
+    grid-column: 1/3;
+    font-size: 4.5vw;
+    margin-bottom: 0;
+    height: 34px;
+  }
+  .albumy-biber4-container > .albumy-biber3-text >.albumy-biber3-text-inside > p {
+    grid-column: 1/3;
+    margin-top: 1.6vh;
+  }
+}
 </style>
 
  
