Dodanie przyciski do kupna

--- a/src/components/Plyty_cmpnt.astro
+++ b/src/components/Plyty_cmpnt.astro
@@ -44,7 +44,7 @@ import { ViewTransitions } from "astro:transitions";
                 <!-- <h6>
                     Premiera: 29 kwietnia 2025
                 </h6> -->
-                <!-- <a href="/plyty/biber">
+                <a href="/plyty/biber">
                     <button class="cta">
                       <span>Kup Biber</span>
                       <svg width="27px" height="18px" viewBox="0 0 13 10">
@@ -52,7 +52,7 @@ import { ViewTransitions } from "astro:transitions";
                         <polyline points="8 1 12 5 8 9"></polyline>
                       </svg>
                     </button>
-                  </a> -->
+                </a>
             </div>
         </div>
     </div>
