--- a/src/components/en_components/Plyty_cmpnt.astro
+++ b/src/components/en_components/Plyty_cmpnt.astro
@@ -39,7 +39,7 @@ import { ViewTransitions } from "astro:transitions";
                 <p class="projekt-text-p">
                     The debut album of Fantastica is a story of contrasts. Sacrum.Profanum. takes you on a musical journey through the world of Heinrich Ignaz Franz von Biber—a composer who masterfully balanced between the extraordinary and the everyday. In his works, spirituality meets earthly expression, and mystical contemplation intertwines with untamed virtuosity. On this album, the Baroque violin and harpsichord not only interpret these contrasts but become part of them—vibrating with energy, painting sonic landscapes, and telling stories filled with tension, melancholy, and bravado.
                 </p>
-                <!-- <a href="CD/biber">
+                <a href="CD/biber">
                     <button class="cta">
                       <span>Buy Biber</span>
                       <svg width="27px" height="18px" viewBox="0 0 13 10">
@@ -47,7 +47,7 @@ import { ViewTransitions } from "astro:transitions";
                         <polyline points="8 1 12 5 8 9"></polyline>
                       </svg>
                     </button>
-                </a> -->
+                </a>
             </div>
         </div>
     </div>
