--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -6,7 +6,8 @@
 		<link rel="icon" href="/favicon.png" type="image/png">	
 		<link rel="mask-icon" href="/images/safari-pinned-tab.svg?v=M44lzPylqQ" color="#000000">
         <link href="/admin/config.yml" type="text/yaml" rel="cms-config-url" />
-		<title>Admin</title>
+		<title>Admin</title>  
+        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 	</head>
 	<body>
         <script src="https://unpkg.com/decap-cms@^3.1.2/dist/decap-cms.js"></script>
