--- a/src/components/Plyty_cmpnt.astro
+++ b/src/components/Plyty_cmpnt.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 import albumyHeadlineImg from '../assets/albumyHeadline.png';
 import plytyEclipse from '../assets/plytyEclipseLol.png';
 import plytyBiber from '../assets/plytyBiber.png';
@@ -20,19 +21,19 @@ import { ViewTransitions } from "astro:transitions";
             </p>
         </div>
         <div class="albumy-headline-img-container">
-            <img class="albumyHeadlineImg" src={albumyHeadlineImg.src} alt="" />
-            <img class="albumyEclipseHeadline" src={plytyEclipse.src} alt="" />
+            <Image class="albumyHeadlineImg" src={albumyHeadlineImg} alt="" />
+            <Image class="albumyEclipseHeadline" src={plytyEclipse} alt="" />
         </div>
     </div>
     <div class="albumy-biber-container">
         <div class="albumy-biber-up">
             <div class="albumy-biber-img-container">
-                <img class="albumy-biber-img" src={plytyBiber.src} alt="" />
+                <Image class="albumy-biber-img" src={plytyBiber} alt="Okładka plyty " />
             </div>
             <div class="albumy-biber-text">
                 <!-- TODO - WAZNE: ZROB KROPKI -->
                 <h2>
-                    BIBER<img class="plyty-biber-dots" src={plytyBiberDots.src} alt="" />
+                    BIBER<Image class="plyty-biber-dots" src={plytyBiberDots} alt="Kolorowe kropki z albumu" />
                 </h2>
                 <h4>
                     Trochę Sacrum,<br>Trochę Profanum
@@ -41,17 +42,55 @@ import { ViewTransitions } from "astro:transitions";
                     Pierwszy album Owczarek | Łoboda Duo to opowieść o kontrastach. TROCHĘ SACRUM, TROCHĘ PROFANUM to muzyczna podróż przez świat Heinricha Ignaza Franza von Bibera – kompozytora, który jak nikt inny potrafił balansować na granicy tego, co niezwykłe i codzienności. W jego utworach duchowość spotyka się z ziemską ekspresją, a mistyczna kontemplacja przeplata się z dziką wirtuozerią.
                     Na tej płycie skrzypce barokowe i klawesyn nie tylko interpretują te kontrasty, ale stają się ich częścią – wibrują energią, malują przestrzeń dźwiękiem, opowiadają historie pełne napięcia, melancholii i brawury.           
                 </p>
-                <!-- <h6>
+                <h6>
                     Premiera: 29 kwietnia 2025
-                </h6> -->
+                </h6>
                 <a href="/plyty/biber">
-                    <button class="cta">
+                    <button class="przsprdrz-btn">
+                        Zamów w przedsprzedaży  
+                        <div class="star-1"
+                        style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                        >
+                          <svg >
+                            <circle cx="20" cy="20" r="10" fill="#0bee73" />
+                          </svg>
+                        </div>
+                        <div class="star-2">
+                          <svg >
+                            <circle cx="20" cy="20" r="11" fill="#f55e5c" />
+                          </svg>
+                        </div>
+                        <div 
+                        class="star-3"
+                        style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                        >
+                          <svg >
+                            <circle cx="20" cy="20" r="9" fill="#f7793c" />
+                          </svg>
+                        </div>
+                        <div class="star-4">
+                          <svg >
+                            <circle cx="20" cy="20" r="9" fill="#f7793c" />
+                          </svg>
+                        </div>
+                        <div class="star-5">
+                          <svg >
+                            <circle cx="20" cy="20" r="11" fill="#0bee73" />
+                          </svg>
+                        </div>
+                        <div class="star-6">
+                          <svg >
+                            <circle cx="20" cy="20" r="10" fill="#f55e5c" />
+                          </svg>
+                        </div>
+                      </button>
+                    <!-- <button class="cta">
                       <span>Kup Biber</span>
                       <svg width="27px" height="18px" viewBox="0 0 13 10">
                         <path d="M1,5 L11,5"></path>
                         <polyline points="8 1 12 5 8 9"></polyline>
                       </svg>
-                    </button>
+                    </button> -->
                 </a>
             </div>
         </div>
@@ -109,6 +148,7 @@ import { ViewTransitions } from "astro:transitions";
     }
     .albumyHeadlineImg {
         height: 29vw;
+        width: auto;
         z-index: 1;
     }
 
@@ -166,7 +206,9 @@ import { ViewTransitions } from "astro:transitions";
         justify-content: end;
     }
     .albumy-biber-img {
-        object-fit: contain;
+        object-fit: contain;    
+        height: fit-content;
+        margin-top: 270px;
         width: 82%;
         padding-right: 4.3vw;
     }
@@ -206,7 +248,7 @@ import { ViewTransitions } from "astro:transitions";
     }
 
         .albumy-biber-text > a > button {
-            margin-top: 50px;
+            /* margin-top: 50px; */
         }
         .cta {
             font-size: clamp(16px, 1.9vw, 35px);
@@ -295,6 +337,7 @@ import { ViewTransitions } from "astro:transitions";
         top: -6vw;
         right: -5.3vw;
         width: 26vw;
+        height: 21vw;
     }
 /* Biber2 */
 
@@ -378,6 +421,178 @@ import { ViewTransitions } from "astro:transitions";
         filter: blur(235px);
         left: 10vw;
     }
+
+    h6 {
+        font-size: clamp(16px, 1.7vw, 30px);
+        font-family: "Gilda Display";
+    }
+
+    .przsprdrz-btn {
+      height: 60px;
+      position: relative;
+      padding: 8px 20px;
+      background: #f55e5c;
+      font-size: 14px;
+      font-weight: 600;
+      box-shadow: 0px 0px 10px 0px rgb(255, 255, 255);
+      color: #ffff;
+      border: 0px solid #a3051d;
+      border-radius: 78px;
+      box-shadow: 0 0 0 #a3051d8c;
+      transition: all 0.3s ease-in-out;
+      cursor: pointer;
+      align-self: center;
+    }
+
+  .star-1 {
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    width: 25px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #0bee73);
+    z-index: -5;
+    transition: all 0.8s cubic-bezier(0.05, 0.83, 0.43, 0.96);
+    pointer-events: none;
+  }
+
+  .star-2 {
+    position: absolute;
+    top: 45%;
+    left: 45%;
+    width: 15px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #f55e5c);
+    z-index: -5;
+    transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
+    pointer-events: none;
+  }
+
+  .star-3 {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    width: 5px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #de6363);
+    z-index: -5;
+    transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
+    pointer-events: none;
+  }
+
+  .star-4 {
+    position: absolute;
+    top: 20%;
+    left: 40%;
+    width: 8px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #f55e5c);
+    z-index: -5;
+    transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
+    pointer-events: none;
+  }
+
+  .star-5 {
+    position: absolute;
+    top: 25%;
+    left: 45%;
+    width: 15px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #0bee73);
+    z-index: -5;
+    transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
+    pointer-events: none;
+  }
+
+  .star-6 {
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    width: 5px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #de6363);
+    z-index: -5;
+    transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
+    pointer-events: none;
+  }
+
+  .przsprdrz-btn:hover {
+    background: #dbd9d9;
+    color: #f5875c;
+    box-shadow: 0 0px 25px #f5875c8c;
+  }
+
+  button:hover .star-1 {
+    position: absolute;
+    top: -20%;
+    left: -20%;
+    width: 20px;
+    height: auto;
+    fill: #0bee73;
+    filter: drop-shadow(0 0 10px #0bee73);
+    z-index: 2;
+  }
+
+  button:hover .star-2 {
+    position: absolute;
+    top: 35%;
+    left: -25%;
+    width: 15px;
+    height: auto;
+    fill: #de6363;
+    filter: drop-shadow(0 0 10px #f55e5c);
+    z-index: 2;
+  }
+
+  button:hover .star-3 {
+    position: absolute;
+    top: 80%;
+    left: -10%;
+    width: 10px;
+    height: auto;
+    fill: #f55e5c;
+    filter: drop-shadow(0 0 10px #de6363);
+    z-index: 2;
+  }
+
+  button:hover .star-4 {
+    position: absolute;
+    top: -25%;
+    left: 105%;
+    width: 20px;
+    height: auto;
+    fill: #f55e5c;
+    filter: drop-shadow(0 0 10px #f55e5c);
+    z-index: 2;
+  }
+
+  button:hover .star-5 {
+    position: absolute;
+    top: 30%;
+    left: 115%;
+    width: 15px;
+    height: auto;
+    fill: #0bee73;
+    filter: drop-shadow(0 0 10px #0bee73);
+    z-index: 2;
+  }
+
+  button:hover .star-6 {
+    position: absolute;
+    top: 80%;
+    left: 105%;
+    width: 10px;
+    height: auto;
+    fill: #de6363;
+    filter: drop-shadow(0 0 10px #de6363);
+    z-index: 2;
+  }
+
+  .fil0 {
+    pointer-events: none;
+    /* fill: #f55e5c; */
+  }
+
     @media screen and (min-width: 2000px) {
         .albumy-container {
             grid-template-rows: 38vw 78vw 60vw 78vw;
@@ -410,6 +625,7 @@ import { ViewTransitions } from "astro:transitions";
         }
         .albumyHeadlineImg {
             height: 59vw;
+            width: auto;
         }
         .albumy-biber2-container {
             margin-top: -0.2vw;
