--- a/src/components/en_components/Plyty_cmpnt.astro
+++ b/src/components/en_components/Plyty_cmpnt.astro
@@ -39,14 +39,55 @@ import { ViewTransitions } from "astro:transitions";
                 <p class="projekt-text-p">
                     The debut album of Fantastica is a story of contrasts. Sacrum.Profanum. takes you on a musical journey through the world of Heinrich Ignaz Franz von Biber—a composer who masterfully balanced between the extraordinary and the everyday. In his works, spirituality meets earthly expression, and mystical contemplation intertwines with untamed virtuosity. On this album, the Baroque violin and harpsichord not only interpret these contrasts but become part of them—vibrating with energy, painting sonic landscapes, and telling stories filled with tension, melancholy, and bravado.
                 </p>
+                <h6>
+                    Release: 29 April 2025
+                </h6>
                 <a href="CD/biber">
-                    <button class="cta">
+                    <button class="przsprdrz-btn">
+                        Order in Pre-sale  
+                        <div class="star-1"
+                        style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                        >
+                          <svg >
+                            <circle cx="20" cy="20" r="10" fill="#0bee73" />
+                          </svg>
+                        </div>
+                        <div class="star-2">
+                          <svg >
+                            <circle cx="20" cy="20" r="11" fill="#f55e5c" />
+                          </svg>
+                        </div>
+                        <div 
+                        class="star-3"
+                        style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                        >
+                          <svg >
+                            <circle cx="20" cy="20" r="9" fill="#f7793c" />
+                          </svg>
+                        </div>
+                        <div class="star-4">
+                          <svg >
+                            <circle cx="20" cy="20" r="9" fill="#f7793c" />
+                          </svg>
+                        </div>
+                        <div class="star-5">
+                          <svg >
+                            <circle cx="20" cy="20" r="11" fill="#0bee73" />
+                          </svg>
+                        </div>
+                        <div class="star-6">
+                          <svg >
+                            <circle cx="20" cy="20" r="10" fill="#f55e5c" />
+                          </svg>
+                        </div>
+                      </button>
+                    <!-- <button class="cta">
                       <span>Buy Biber</span>
                       <svg width="27px" height="18px" viewBox="0 0 13 10">
                         <path d="M1,5 L11,5"></path>
                         <polyline points="8 1 12 5 8 9"></polyline>
                       </svg>
-                    </button>
+                    </button> -->
                 </a>
             </div>
         </div>
@@ -199,7 +240,7 @@ import { ViewTransitions } from "astro:transitions";
         font-size: clamp(20px, 2.5vw, 42px);
     }
     .albumy-biber-text > a > button {
-            margin-top: 50px;
+            /* margin-top: 50px; */
         }
         .cta {
             font-size: clamp(16px, 1.9vw, 35px);
@@ -369,6 +410,177 @@ import { ViewTransitions } from "astro:transitions";
         filter: blur(235px);
         left: 10vw;
     }
+
+    h6 {
+        font-size: clamp(16px, 1.7vw, 30px);
+    }
+
+    .przsprdrz-btn {
+      height: 60px;
+      position: relative;
+      padding: 8px 20px;
+      background: #f55e5c;
+      font-size: 14px;
+      font-weight: 600;
+      box-shadow: 0px 0px 10px 0px rgb(255, 255, 255);
+      color: #ffff;
+      border: 0px solid #a3051d;
+      border-radius: 78px;
+      box-shadow: 0 0 0 #a3051d8c;
+      transition: all 0.3s ease-in-out;
+      cursor: pointer;
+      align-self: center;
+    }
+
+  .star-1 {
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    width: 25px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #0bee73);
+    z-index: -5;
+    transition: all 0.8s cubic-bezier(0.05, 0.83, 0.43, 0.96);
+    pointer-events: none;
+  }
+
+  .star-2 {
+    position: absolute;
+    top: 45%;
+    left: 45%;
+    width: 15px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #f55e5c);
+    z-index: -5;
+    transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
+    pointer-events: none;
+  }
+
+  .star-3 {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    width: 5px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #de6363);
+    z-index: -5;
+    transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
+    pointer-events: none;
+  }
+
+  .star-4 {
+    position: absolute;
+    top: 20%;
+    left: 40%;
+    width: 8px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #f55e5c);
+    z-index: -5;
+    transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
+    pointer-events: none;
+  }
+
+  .star-5 {
+    position: absolute;
+    top: 25%;
+    left: 45%;
+    width: 15px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #0bee73);
+    z-index: -5;
+    transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
+    pointer-events: none;
+  }
+
+  .star-6 {
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    width: 5px;
+    height: auto;
+    filter: drop-shadow(0 0 0 #de6363);
+    z-index: -5;
+    transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
+    pointer-events: none;
+  }
+
+  .przsprdrz-btn:hover {
+    background: #dbd9d9;
+    color: #f5875c;
+    box-shadow: 0 0px 25px #f5875c8c;
+  }
+
+  button:hover .star-1 {
+    position: absolute;
+    top: -20%;
+    left: -20%;
+    width: 20px;
+    height: auto;
+    fill: #0bee73;
+    filter: drop-shadow(0 0 10px #0bee73);
+    z-index: 2;
+  }
+
+  button:hover .star-2 {
+    position: absolute;
+    top: 35%;
+    left: -25%;
+    width: 15px;
+    height: auto;
+    fill: #de6363;
+    filter: drop-shadow(0 0 10px #f55e5c);
+    z-index: 2;
+  }
+
+  button:hover .star-3 {
+    position: absolute;
+    top: 80%;
+    left: -10%;
+    width: 10px;
+    height: auto;
+    fill: #f55e5c;
+    filter: drop-shadow(0 0 10px #de6363);
+    z-index: 2;
+  }
+
+  button:hover .star-4 {
+    position: absolute;
+    top: -25%;
+    left: 105%;
+    width: 20px;
+    height: auto;
+    fill: #f55e5c;
+    filter: drop-shadow(0 0 10px #f55e5c);
+    z-index: 2;
+  }
+
+  button:hover .star-5 {
+    position: absolute;
+    top: 30%;
+    left: 115%;
+    width: 15px;
+    height: auto;
+    fill: #0bee73;
+    filter: drop-shadow(0 0 10px #0bee73);
+    z-index: 2;
+  }
+
+  button:hover .star-6 {
+    position: absolute;
+    top: 80%;
+    left: 105%;
+    width: 10px;
+    height: auto;
+    fill: #de6363;
+    filter: drop-shadow(0 0 10px #de6363);
+    z-index: 2;
+  }
+
+  .fil0 {
+    pointer-events: none;
+    /* fill: #f55e5c; */
+  }
+
     @media screen and (min-width: 2000px) {
         .albumy-container {
             grid-template-rows: 38vw 78vw 60vw 78vw;
