--- a/src/components/About_cmpnt.astro
+++ b/src/components/About_cmpnt.astro
@@ -41,8 +41,8 @@ import { ViewTransitions } from "astro:transitions";
                 Szukamy brzmień, które poruszają i zaskakują. Nasze koncerty to spotkania z dawną muzyką i jej niezwykłą głębią. Pokazujemy, że barok jest wciąż aktualny i niezmiennie porusza pokolenia.
             </p>
         </div>
-        <img class="about-1-img" src={about1.src} alt="O nas-1" />
-        <img class="about-1-eclipse" src={about1Eclipse.src} alt="O nas-1-eclipse" />
+        <img class="about-1-img" src={about1.src} alt="O nas-1" fetchpriority="high" />
+        <img class="about-1-eclipse" src={about1Eclipse.src} alt="O nas-1-eclipse" fetchpriority="high" />
     </div>
     <div class="about-content-2">
         <div class="about-content-2-inside">
