--- a/src/components/Wydarzenie-przyszle.astro
+++ b/src/components/Wydarzenie-przyszle.astro
@@ -27,9 +27,12 @@ import Strzlk from '../assets/strzlk4hover.png';
     <a class="nazwa-wydarzenia">Biber</a>
     <a class="opis-wydarzenia">Klasycznie Niepoważni</a>
     <a class="miejsce-wydarzenia">Warszawa, PL</a>
-    <a class="czas-wydarzenia">19:00</a>
+    <a class="czas-wydarzenia">ODWOŁANY</a>
 </div>
-<div class="wydarzenie" >
+<div class="wydarzenie" id="wydarzenie-klik" onclick="window.location.href='https://fb.me/e/bj3kbO5VR';">
+    <div class="loader">
+        <Image src={Strzlk} alt="" />
+    </div>  
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">29</p>
         <p class="data-wydarzenia-m-r">kwie<br>2025</p>
