--- a/src/components/en_components/Wydarzenie-przyszle.astro
+++ b/src/components/en_components/Wydarzenie-przyszle.astro
@@ -26,9 +26,12 @@ import Strzlk from '../../assets/strzlk4hover.png';
     <a class="nazwa-wydarzenia">Biber</a>
     <a class="opis-wydarzenia">Classically Playful</a>
     <a class="miejsce-wydarzenia">Warsaw, PL</a>
-    <a class="czas-wydarzenia">19:00</a>
+    <a class="czas-wydarzenia">CANCELLED</a>
 </div>
-<div class="wydarzenie" >
+<div class="wydarzenie" id="wydarzenie-klik" onclick="window.location.href='https://fb.me/e/2DgL3KEWO';">
+    <div class="loader">
+        <Image src={Strzlk} alt="" />
+    </div>    
     <div class="data-wydarzenia">
         <p class="data-wydarzenia-dzien">29</p>
         <p class="data-wydarzenia-m-r">Apr<br>2025</p>
