--- a/src/components/EventCard.astro
+++ b/src/components/EventCard.astro
@@ -1,4 +1,7 @@
 ---
+import { Image } from 'astro:assets';
+import Strzlk from '../assets/strzlk4hover.png';
+
 interface Props {
   event: {
     data: {
@@ -6,8 +9,8 @@ interface Props {
         dzien: string;
         mR: string;
       };
+      repertuar: string;
       nazwaWydarzenia: string;
-      opisWydarzenia: string;
       miejsceWydarzenia: string;
       czasWydarzenia: string;
       linkWydarzenia?: string;
@@ -20,26 +23,43 @@ const { event } = Astro.props;
 const [month, year] = event.data.dataWydarzenia.mR.split(' ');
 ---
 
-<div class="wydarzenie">
-  <div class="data-wydarzenia">
-    <p class="data-wydarzenia-dzien">{event.data.dataWydarzenia.dzien}</p>
-    <p class="data-wydarzenia-m-r">
-      {month}<br>{year}
-    </p>
-  </div>
-  
-  {event.data.linkWydarzenia ? (
-    <a href={event.data.linkWydarzenia} class="nazwa-wydarzenia" target="_blank" rel="noopener noreferrer">
-      {event.data.nazwaWydarzenia}
-    </a>
+{
+  event.data.linkWydarzenia ? (
+    <div 
+      class="wydarzenie" 
+      id="wydarzenie-klik"
+      onclick={`window.location.href='${event.data.linkWydarzenia}'`}
+      style="cursor: pointer; position: relative;"
+    >
+    <div class="loader">
+        <img src={Strzlk.src} alt="" />
+    </div>  
+      <div class="data-wydarzenia">
+        <p class="data-wydarzenia-dzien">{event.data.dataWydarzenia.dzien}</p>
+        <p class="data-wydarzenia-m-r">
+          {month.toLowerCase()}<br>{year}
+        </p>
+      </div>
+      <a class="repertuar">{event.data.repertuar}</a>
+      <a class="nazwa-wydarzenia">{event.data.nazwaWydarzenia}</a>
+      <a class="miejsce-wydarzenia">{event.data.miejsceWydarzenia}</a>
+      <a class="czas-wydarzenia">{event.data.czasWydarzenia}</a>
+    </div>
   ) : (
-    <span class="nazwa-wydarzenia">{event.data.nazwaWydarzenia}</span>
-  )}
-  
-  <p class="opis-wydarzenia">{event.data.opisWydarzenia}</p>
-  <p class="miejsce-wydarzenia">{event.data.miejsceWydarzenia}</p>
-  <p class="czas-wydarzenia">{event.data.czasWydarzenia}</p>
-</div>
+    <div class="wydarzenie">
+      <div class="data-wydarzenia">
+        <p class="data-wydarzenia-dzien">{event.data.dataWydarzenia.dzien}</p>
+        <p class="data-wydarzenia-m-r">
+          {month.toLowerCase()}<br>{year}
+        </p>
+      </div>
+      <span class="repertuar">{event.data.repertuar}</span>
+      <span class="nazwa-wydarzenia">{event.data.nazwaWydarzenia}</span>
+      <span class="miejsce-wydarzenia">{event.data.miejsceWydarzenia}</span>
+      <span class="czas-wydarzenia">{event.data.czasWydarzenia}</span>
+    </div>
+  )
+}
 
 <style>
     .wydarzenie {
@@ -91,13 +111,13 @@ const [month, year] = event.data.dataWydarzenia.mR.split(' ');
             font-size: 14px;
             font-weight: 400;
         }
-        .nazwa-wydarzenia {
+        .repertuar {
             flex-basis: 100px;
         }
         #lastella {
             margin-left: 22px;
         }
-        .opis-wydarzenia {
+        .nazwa-wydarzenia {
             flex-basis: 200px;
         }
         .miejsce-wydarzenia {
@@ -112,8 +132,8 @@ const [month, year] = event.data.dataWydarzenia.mR.split(' ');
 
         .loader {
             position: absolute;
-            padding-bottom: 45px;
-            left: 68.1vw;   
+            padding-bottom: 42.3px;
+            left: 62.5vw;
             display: flex        ;
             justify-content: center;
             align-items: center;
@@ -128,7 +148,7 @@ const [month, year] = event.data.dataWydarzenia.mR.split(' ');
             .wydarzenie a {
                 font-size: 14px;
             }
-            .opis-wydarzenia {
+            .nazwa-wydarzenia {
                 flex-basis: 180px;
             }
         }
@@ -137,7 +157,7 @@ const [month, year] = event.data.dataWydarzenia.mR.split(' ');
             .wydarzenie a {
                 font-size: 14px;
             }
-            .opis-wydarzenia {
+            .nazwa-wydarzenia {
                 flex-basis: 180px;
             }
         }
@@ -154,7 +174,7 @@ const [month, year] = event.data.dataWydarzenia.mR.split(' ');
                 grid-column: 1/2;
                 grid-row: 1/3;
             }
-            .nazwa-wydarzenia {
+            .repertuar {
                 grid-column: 2/3;
                 grid-row: 1/2;
             }
@@ -162,7 +182,7 @@ const [month, year] = event.data.dataWydarzenia.mR.split(' ');
                 grid-column: 3/4;
                 grid-row: 1/2;
             }
-            .opis-wydarzenia {
+            .nazwa-wydarzenia {
                 grid-column: 2/3;
                 grid-row: 2/3;
             }
