--- a/src/components/en_components/EventCard.astro
+++ b/src/components/en_components/EventCard.astro
@@ -48,7 +48,7 @@ const [month, year] = event.data.eventDate.monthYear.split(' ');
   ) : (
     <div class="wydarzenie">
       <div class="data-wydarzenia">
-        <p class="data-wydarzenia-dzien">{event.data.eventDate.dzien}</p>
+        <p class="data-wydarzenia-dzien">{event.data.eventDate.day}</p>
         <p class="data-wydarzenia-m-r">
           {month.toLowerCase()}<br>{year}
         </p>
