--- a/src/components/en_components/Wydarzenia.astro
+++ b/src/components/en_components/Wydarzenia.astro
@@ -1,7 +1,7 @@
 ---
 // Import the collection
 import { getCollection } from 'astro:content';
-import EventCard from '../EventCard.astro';
+import EventCard from '../../components/en_components/EventCard.astro';
 
 // Get all events
 const allEvents = await getCollection('events');
