--- a/src/components/en_components/EventCard.astro
+++ b/src/components/en_components/EventCard.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import Strzlk from '../assets/strzlk4hover.png';
+import Strzlk from '../../assets/strzlk4hover.png';
 
 interface Props {
   event: {
