--- a/src/components/en_components/Wydarzenia.astro
+++ b/src/components/en_components/Wydarzenia.astro
@@ -28,7 +28,7 @@ function convertToDate(dateObj) {
 }
 ---
 
-<div class="events-component">
+<div class="wydarzenia-cmpnt">
     {sortedEvents.map((event) => (
         <EventCard event={event} />
     ))}
