--- a/src/components/Glowna_cmpnt3.astro
+++ b/src/components/Glowna_cmpnt3.astro
@@ -55,6 +55,8 @@ import vidoo from '../assets/fantastica-vid.mp4';
             font-weight: 900;
             line-height: normal;
             pointer-events: none;
+			will-change: opacity, transform;
+			-webkit-font-smoothing: antialiased;
 		}
 
 	.scroll-container {
