--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -65,6 +65,8 @@ const homeLink = isEnglish ? "/en" : "/";
     left: 0;
     width: 100%;
     z-index: 20;
+    -webkit-font-smoothing: antialiased;
+
   }
   #logo {
       width: 90px;
