--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,7 +56,7 @@ const title = pageTitles[currentPath as keyof typeof pageTitles] || 'Fantastica'
 	html,
 	body {
 		/* TODO - experimental font smoothing */
-		-webkit-font-smoothing: antialiased;
+		/* -webkit-font-smoothing: antialiased; */
 		/* scroll-behavior: smooth; */
 		margin: 0;
 		width: 100vw;
