--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import kalendarzPicMain from '../assets/kalendarz-pic-main.png'
 import secondPhotoMain from '../assets/second-photo-main.png'
 import Footer from '../components/Footer.astro'
 ---
-<script>
+<!-- <script>
 	import Lenis from "lenis"
 
     const lenis = new Lenis()
@@ -19,7 +19,7 @@ import Footer from '../components/Footer.astro'
     }
     requestAnimationFrame(raf)
 		
-</script>
+</script> -->
 
 <Layout>
 	<div id="fantastica-glowna">
@@ -471,8 +471,26 @@ import Footer from '../components/Footer.astro'
 	</style>
 	
 	<script>
+		
+		import Lenis from "lenis"
 		import { gsap } from "gsap";
 		import { ScrollTrigger } from "gsap/ScrollTrigger";
+
+		// Initialize a new Lenis instance for smooth scrolling
+		const lenis = new Lenis();
+
+		// Synchronize Lenis scrolling with GSAP's ScrollTrigger plugin
+		lenis.on('scroll', ScrollTrigger.update);
+
+		// Add Lenis's requestAnimationFrame (raf) method to GSAP's ticker
+		// This ensures Lenis's smooth scroll animation updates on each GSAP tick
+		gsap.ticker.add((time) => {
+		lenis.raf(time * 1000); // Convert time from seconds to milliseconds
+		});
+
+		// Disable lag smoothing in GSAP to prevent any delay in scroll animations
+		gsap.ticker.lagSmoothing(0);
+
 
 		if (typeof window !== "undefined") {
 
