Google search optimizations

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -80,6 +80,7 @@ const homeLink = isEnglish ? "/en" : "/";
 
     .mobile-nav {
       display: none;
+      -webkit-font-smoothing: antialiased;
     }
     header {
       mix-blend-mode: difference;
