Nowy link newsletter

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,7 +14,8 @@ import ytIcon from '../assets/yt_icon.svg';
         <div class="footer-left">
             <h2>DOŁĄCZ DO NAS</h2>
             <p id="pod-dolacz">i wejdź z nami do świata muzyki</p>
-            <form id="newsletter-input" action="https://buttondown.email/api/emails/embed-subscribe/szymon" method="post">
+            <!-- <form id="newsletter-input" action="https://buttondown.email/api/emails/embed-subscribe/szymon" method="post"> -->
+            <form id="newsletter-input" action="https://buttondown.email/api/emails/embed-subscribe/fantastica.ensemble" method="post">
                             <input id="newsletter-input-email" type="email" name="email" placeholder="Email" required>
                             <label for="Email" class="form__label">E-mail</label>
             <!-- <button type="submit" value="Subscribe">ZAPISZ SIĘ</button> -->
