--- a/src/components/Plyty_cmpnt.astro
+++ b/src/components/Plyty_cmpnt.astro
@@ -47,17 +47,17 @@ import { ViewTransitions } from "astro:transitions";
                 </h6>
                 <a href="/plyty/biber">
                     <button class="przsprdrz-btn">
-                        Zamów w przedsprzedaży  
+                        Zamów teraz  
                         <div class="star-1"
                         style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
                         >
                           <svg >
-                            <circle cx="20" cy="20" r="10" fill="#0bee73" />
+                            <circle cx="10" cy="20" r="10" fill="#0bee73" />
                           </svg>
                         </div>
                         <div class="star-2">
                           <svg >
-                            <circle cx="20" cy="20" r="11" fill="#f55e5c" />
+                            <circle cx="10" cy="20" r="11" fill="#f55e5c" />
                           </svg>
                         </div>
                         <div 
@@ -65,22 +65,22 @@ import { ViewTransitions } from "astro:transitions";
                         style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
                         >
                           <svg >
-                            <circle cx="20" cy="20" r="9" fill="#f7793c" />
+                            <circle cx="10" cy="20" r="9" fill="#f7793c" />
                           </svg>
                         </div>
                         <div class="star-4">
                           <svg >
-                            <circle cx="20" cy="20" r="9" fill="#f7793c" />
+                            <circle cx="15" cy="20" r="9" fill="#f7793c" />
                           </svg>
                         </div>
                         <div class="star-5">
                           <svg >
-                            <circle cx="20" cy="20" r="11" fill="#0bee73" />
+                            <circle cx="15" cy="20" r="11" fill="#0bee73" />
                           </svg>
                         </div>
                         <div class="star-6">
                           <svg >
-                            <circle cx="20" cy="20" r="10" fill="#f55e5c" />
+                            <circle cx="15" cy="20" r="10" fill="#f55e5c" />
                           </svg>
                         </div>
                       </button>
