--- a/src/pages/plyty/biber.astro
+++ b/src/pages/plyty/biber.astro
@@ -76,7 +76,7 @@ import Biber2 from '../../assets/biber2.png'
       <div class="albumy-biber3-text">
 
         <div class="albumy-biber3-text-inside">
-          <h4>Album w przedsprzedaży zawiera:</h4>
+          <h4>Album w sprzedaży zawiera:</h4>
           <p>
             - oryginalna płyta CD z autografami artystek, <br>
             - prezent-niespodzianka. 
@@ -87,17 +87,17 @@ import Biber2 from '../../assets/biber2.png'
     
     <div class="przesprzedaz-container">
         <button onclick="window.open('https://buy.stripe.com/8wMbJNfHi0XSdDq288', '_blank')">
-          Zamów w przedsprzedaży  
+          Zamów teraz  
           <div class="star-1"
           style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
           >
             <svg >
-              <circle cx="20" cy="20" r="10" fill="#0bee73" />
+              <circle cx="10" cy="20" r="10" fill="#0bee73" />
             </svg>
           </div>
           <div class="star-2">
             <svg >
-              <circle cx="20" cy="20" r="11" fill="#f55e5c" />
+              <circle cx="10" cy="20" r="11" fill="#f55e5c" />
             </svg>
           </div>
           <div 
@@ -105,22 +105,22 @@ import Biber2 from '../../assets/biber2.png'
           style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
           >
             <svg >
-              <circle cx="20" cy="20" r="9" fill="#f7793c" />
+              <circle cx="10" cy="20" r="9" fill="#f7793c" />
             </svg>
           </div>
           <div class="star-4">
             <svg >
-              <circle cx="20" cy="20" r="9" fill="#f7793c" />
+              <circle cx="15" cy="20" r="9" fill="#f7793c" />
             </svg>
           </div>
           <div class="star-5">
             <svg >
-              <circle cx="20" cy="20" r="11" fill="#0bee73" />
+              <circle cx="15" cy="20" r="11" fill="#0bee73" />
             </svg>
           </div>
           <div class="star-6">
             <svg >
-              <circle cx="20" cy="20" r="10" fill="#f55e5c" />
+              <circle cx="15" cy="20" r="10" fill="#f55e5c" />
             </svg>
           </div>
         </button>
