--- a/src/components/en_components/Plyty_cmpnt.astro
+++ b/src/components/en_components/Plyty_cmpnt.astro
@@ -19,8 +19,8 @@ import { ViewTransitions } from "astro:transitions";
                 We invite you on a musical journey filled with contrasts – from mystical contemplation to virtuosic expression. Check out our latest albums and let yourself be captivated by baroque sounds!            </p>
         </div>
         <div class="albumy-headline-img-container">
-            <img class="albumyHeadlineImg" src={albumyHeadlineImg.src} alt="" />
-            <img class="albumyEclipseHeadline" src={plytyEclipse.src} alt="" />
+            <img class="albumyHeadlineImg" src={albumyHeadlineImg.src} alt="" fetchpriority="high"/>
+            <img class="albumyEclipseHeadline" src={plytyEclipse.src} alt="" fetchpriority="high"/>
         </div>
     </div>
     <div class="albumy-biber-container">
