Mini fix optymalizacji youtube

--- a/src/components/Posluchaj_cmpnt.astro
+++ b/src/components/Posluchaj_cmpnt.astro
@@ -45,7 +45,7 @@ import { ViewTransitions } from "astro:transitions";
         </div>
         <div class="zobacz-na-zywo-embed">
 			<img class="naZywo" src={naZywo.src} alt="" />
-                <lite-youtube videoid="ZnTkeduqcbU" style="background-image: url('https://i.ytimg.com/vi/ZnTkeduqcbU/hqdefault.jpg');">
+                <lite-youtube videoid="ZnTkeduqcbU" style="background-image: url('https://i.ytimg.com/vi/ZnTkeduqcbU/hqdefault.jpg'); max-width: none;">
                     <a href="https://www.youtube.com/embed/ZnTkeduqcbU" class="lty-playbtn" title="Fantastica Ensemble">
                         <span class="lyt-visually-hidden">Fantastica Ensemble</span>
                     </a>
