Naprawa en cd biber

--- a/src/components/en_components/Plyty_cmpnt.astro
+++ b/src/components/en_components/Plyty_cmpnt.astro
@@ -42,7 +42,7 @@ import { ViewTransitions } from "astro:transitions";
                 <h6>
                     Release: 29 April 2025
                 </h6>
-                <a href="CD/biber">
+                <a href="albums/biber">
                     <button class="przsprdrz-btn">
                         Order Now  
                         <div class="star-1"
