usuwanie niepotrzebnych plikow

--- a/src/components/dynamic_cal.astro
+++ b/src/components/dynamic_cal.astro
@@ -3,7 +3,7 @@
 import { getCollection } from 'astro:content';
 // import EventCard from '../components/EventCard.astro';
 // import EventCard from '../components/EventCard-nocss.astro';
-import EventCard from '../components/EventCard-nocss.astro';
+// import EventCard from '../components/EventCard-nocss.astro';
 
 // Get all events
 const allEvents = await getCollection('wydarzenia');
