--- a/src/components/dynamic_cal.astro
+++ b/src/components/dynamic_cal.astro
@@ -1,7 +1,7 @@
 ---
 // Import the collection
 import { getCollection } from 'astro:content';
-// import EventCard from '../components/EventCard.astro';
+import EventCard from '../components/EventCard.astro';
 // import EventCard from '../components/EventCard-nocss.astro';
 // import EventCard from '../components/EventCard-nocss.astro';
 
